WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50793
WebKit2: Control-click doesn't invoke context menu
https://bugs.webkit.org/show_bug.cgi?id=50793
Summary
WebKit2: Control-click doesn't invoke context menu
Maciej Stachowiak
Reported
2010-12-09 17:39:59 PST
WebKit2: Control-click doesn't invoke context menu
Attachments
Patch
(2.27 KB, patch)
2010-12-09 18:20 PST
,
Maciej Stachowiak
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2010-12-09 18:20:00 PST
Created
attachment 76151
[details]
Patch
Maciej Stachowiak
Comment 2
2010-12-09 18:46:30 PST
Committed
r73675
: <
http://trac.webkit.org/changeset/73675
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug