2010-12-09  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Brady Eidson.

        WebKit2: Control-click doesn't invoke context menu
        https://bugs.webkit.org/show_bug.cgi?id=50793
        <rdar://problem/8664800>

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::isContextClick): New helper function - on Mac, not only right clicks
        but also control-left-clicks are context clicks.
        (WebKit::handleMouseEvent): Use above.


Canonical link: https://commits.webkit.org/64082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73675 268f45cc-cd09-0410-ab3c-d52691b4dbfc